Fix iPod elements alignment when it is contained in an element with a different alignment

--- a/src/css/ipod.css
+++ b/src/css/ipod.css
@@ -2,6 +2,7 @@
   position: relative;
   width: 445px;
   height: 680px;
+  text-align: left;
   /* TODO: Remove next rule when Firefox supports image-set() */
   background-size: contain;
   background-image: url('../img/ipodjs.png');
